# tracing-otel-spawn-example

./: .gitignore  Cargo.toml  README.md  build-and-run.sh  combined-fake-emf.jsonl
child/: Cargo.toml
child/src/: main.rs
grandchild/: Cargo.toml
grandchild/src/: main.rs
parent/: Cargo.toml
parent/src/: main.rs
writer-demo/: Cargo.toml
writer-demo/src/: main.rs
