[workspace]
resolver = "2"
members = ["parent", "child", "grandchild"]

[workspace.package]
edition = "2021"
publish = false
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
opentelemetry = "*"
opentelemetry-stdout = { version = "*", features = ["trace"] }
opentelemetry_sdk = { version = "*", features = ["rt-tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["unbounded_depth"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-opentelemetry = "0.23"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8", features = ["v7"] }
