[package]
name = "child"
edition.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-stdout.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
